--- a/polymer-fullpage.html
+++ b/polymer-fullpage.html
@@ -1,3 +1,4 @@
+
 <!--
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
@@ -8,6 +9,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <!-- Importing Polymer Library -->
+<link rel="import" href="../polymer/polymer.html">
 
 <link rel="import" href="../paper-styles/color.html">
 
