Fixing html tags content for demo snippet

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>elevate-zoom demo</title>
+    <title>polymer-fullpage demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
     <div class="vertical-section-container centered">
-      <h3>Basic elevate-zoom Demo</h3>
+      <h3>Basic polymer-fullpage Demo</h3>
       <demo-snippet>
         <template>
           <polymer-fullpage>
