Changed url paths to relative

--- a/polymer-fullpage.html
+++ b/polymer-fullpage.html
@@ -14,19 +14,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../paper-styles/color.html">
 
 <!-- Including jQuery -->
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../jquery/dist/jquery.min.js"></script>
 
 <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
-<script src="bower_components/fullpage.js/vendors/jquery.easings.min.js"></script>
+<script src="../fullpage.js/vendors/jquery.easings.min.js"></script>
 
 <!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
-<script type="text/javascript" src="bower_components/fullpage.js/vendors/scrolloverflow.min.js"></script>
+<script type="text/javascript" src="../fullpage.js/vendors/scrolloverflow.min.js"></script>
 
 <!-- Including full page .js  -->
-<script type="text/javascript" src="bower_components/fullpage.js/dist/jquery.fullPage.js"></script>
+<script type="text/javascript" src="../fullpage.js/dist/jquery.fullPage.js"></script>
 
 <!-- Including full page.js css code -->
-<link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/jquery.fullPage.css" />
+<link rel="stylesheet" type="text/css" href="../fullpage.js/jquery.fullPage.css" />
 
 <!--
 
