Fixed library name file and updated readme to refelct demo page

--- a/polymer-fullpage.html
+++ b/polymer-fullpage.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <script type="text/javascript" src="../fullpage.js/vendors/scrolloverflow.min.js"></script>
 
 <!-- Including full page .js  -->
-<script type="text/javascript" src="../fullpage.js/dist/jquery.fullPage.js"></script>
+<script type="text/javascript" src="../fullpage.js/dist/jquery.fullpage.js"></script>
 
 <!-- Including full page.js css code -->
 <link rel="stylesheet" type="text/css" href="../fullpage.js/jquery.fullPage.css" />
